<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/fib_img"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:contentDescription="@string/fibonacci_picture"
        app:srcCompat="@drawable/fibonacci" />

    <Button
        android:id="@+id/btn_calcList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/list_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/zero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/btn_lay"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_ant"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/anterior" />

        <Button
            android:id="@+id/btn_sigList"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/siguiente" />
    </LinearLayout>


</LinearLayout>