<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/fib_img"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:contentDescription="@string/fibonacci_picture"
        app:srcCompat="@drawable/fibonacci" />

    <Button
        android:id="@+id/btn_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular" />

    <TextView
        android:id="@+id/fib_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/btn_sig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/siguiente" />

</LinearLayout>