<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/fib_img"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:contentDescription="@string/fibonacci_picture"
        app:srcCompat="@drawable/fibonacci" />

    <EditText
        android:id="@+id/fibTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pos"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_calcTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/txt_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/btn_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_antTxt"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/anterior" />

    </LinearLayout>


</LinearLayout>